WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60662
clipping fixes for wx
https://bugs.webkit.org/show_bug.cgi?id=60662
Summary
clipping fixes for wx
Robin Dunn
Reported
2011-05-11 14:29:09 PDT
Created
attachment 93186
[details]
clipping fixes patch Implement more clipping functions for wxWebKit
Attachments
clipping fixes patch
(4.16 KB, patch)
2011-05-11 14:29 PDT
,
Robin Dunn
kevino
: review+
kevino
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin Ollivier
Comment 1
2011-05-11 21:49:16 PDT
Landed in
r86306
, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug