Reviewed by Kevin Ollivier.

[wx] Implement more clipping functions for wxWebKit.

https://bugs.webkit.org/show_bug.cgi?id=60662



Canonical link: https://commits.webkit.org/75963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86306 268f45cc-cd09-0410-ab3c-d52691b4dbfc